--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "task-lock",
   "version": "1.0.0",
+  "files": [
+    "src"    
+  ],
   "description": "TaskLock 本质是一条队列，用于限制一条通道内同时允许多少次异步操作",
   "main": "./src/TaskLock.js",
   "scripts": {
